--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,11 @@
     --primary-white-color: #FFFFFF;
     --bacground-black-color: #2F303A;
 }
+/* *,
+*::before,
+*::after {
+    box-sizing: border-box;
+} */
 
 body {
     background-color: var(--primary-white-color);
@@ -24,31 +29,65 @@ body {
     list-style: none;
 }
 
+h1,h2,h3,h4,h5,h6,p {
+    margin: 0;
+}
+
 .title {
     font-weight: 700;
-        font-size: 36px;
-        line-height: 1.16;
-        text-align: center;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
 }
+
+.list {
+    padding: 0;
+    margin: 0;
+}
+
 .list, 
 .link {
     text-decoration: none;
     list-style: none;
 }
+
+.container {
+    width: 1200px;
+    outline: 2px solid tomato;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 /* ================= Шапка сайта ================= */
 /* ================= Логотип ================= */
-.site-header {
-    background-color: var(--primary-white-color);
+
+.main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main-nav a {
+    display: block;
+}
+
+.navigation {
+    display: flex;
 }
 .logo { 
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+
     color: var(--primary-text-color);
-        font-family: Raleway, sans-serif;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
-        text-decoration: none;
-        list-style: none;
-        
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+    list-style: none;
 }
 
 .logo-accent {
@@ -58,19 +97,47 @@ body {
 
 /* ================= навигация сайта и контакты ================= */
 
+.nav-list { 
+    display: flex;
+}
+
+.site-nav {
+    display: inline-flex;
+}
+
+.nav-list .item:not(:last-child) {  
+    margin-right: 50px;
+}
+
+.contacts-list .item:not(:last-child) {
+    margin-right: 50px;
+}
 
 .site-nav .link.current {
     color: var(--accent-color);
 }
 
+.contacts-list {
+    display: flex;
+}
+
 .site-nav .link,
 .contacts-list .link{
+   
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+
+.nav-list .link,
+.contacts-list .link
+ {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .site-header .link:hover,
@@ -84,27 +151,32 @@ body {
 /* ================= Герой ================= */
 
 .hero {
+    height: 600px;
     background-color: var(--bacground-black-color);
     color: var(--primary-white-color);  
     text-align: center;
 }
 .hero-title {   
+    margin-bottom: 30px;
+    /* width: 696px; */
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-
     letter-spacing: 0.06em;
     text-transform: uppercase;
 }
 
 .hero-link {
+    padding: 10px 32px;
+    border-radius: 4px;
+
     background-color: var(--accent-color);
     color: var(--primary-white-color);
-
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        letter-spacing: 0.06em;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
         
 }
 
@@ -118,14 +190,32 @@ body {
 /* ================= преимущества================= */
 
 .advantage-title {  
-
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        text-transform: uppercase;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
 }
 
+.list.container { 
+    display: flex;
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.advantage .item {
+    width: 270px;
+    height: 101px;
+    
+}
+
+.advantage .item:not(:last-child) {
+    margin-right: 30px;
+}
+    
+
 .advantage-description {  
+    margin-top: 10px;
+
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -135,14 +225,60 @@ body {
 }
 /* ================= END преимущества================= */
 
+/* ================= Суть работы================= */
+
+.work .list {
+    display: flex;
+}
+
+.work .title {
+    margin-bottom: 50px;
+}
+
+.list .item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.work-image {
+    display: block;
+}
+
+.work .container {
+    padding-bottom: 103px;
+}
+
+.workers .title {
+    margin-bottom: 50px;
+    padding-top: 94px;
+}
+
+.workers .list {
+    display: flex;
+    padding-bottom: 94px;
+}
+
+
+.workers-image {
+    display: block;
+}
+
+
+
+/* ================= END Суть работы================= */
 
 /* ================= Кто работает================= */
 
 
 .workers {
     background-color: #F5F4FA;
+    text-align: center;
 }
 
+.workers .item {
+    width: 270px;
+    height: 368px;
+    background-color: var(--primary-white-color);
+}
 
 .workers-name {
         font-weight: 500;
@@ -158,6 +294,26 @@ body {
         line-height: 1.19;
 }
 
+.workers-paragrapf {
+
+    color: var(--tltle-text-color);
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.357;
+    
+}
+
+.title .list:not(:last-child) {
+    margin-right: 30px;
+}
+
+.workers-image {
+    margin-bottom: 30px;
+}
+
+.workers-name { 
+    margin-bottom: 10px;
+}
 /* ================= END Кто работает================= */
 
 
@@ -165,11 +321,23 @@ body {
 
 .footer {
     background-color: var(--bacground-black-color);
+    height: 252px;
 }
 
-.footer .logo {
-    color: var(--primary-white-color);
+.logo.logo-footer {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 20px;
+    width: 145px;
+    height: 31px;
 }
+.footer .logo{
+    color: var(--primary-white-color);
+    
+}
+
+
 .footer .list {
         color: rgba(255, 255, 255, 0.6);
         font-weight: 400;
@@ -180,7 +348,17 @@ body {
 }
 .adress {
     color: var(--primary-white-color);
+    margin-bottom: 9px;
+    display: inline-block;
 }
+
+
+.contacts:not(:last-child) {
+    margin-bottom: 9px;
+
+}
+
+/* не разобрался как убрать строку на весь футер от class contacts. Если inline-block, то перескакивает выше, а если блок, то ничего не меняется 
 
 /* ================= END футер================= */
 
