--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,9 @@ body {
     list-style: none;
 }
 
-h1,h2,h3,h4,h5,h6,p {
+h1,h2,h3,h4,h5,h6, ul, li, button, p {
     margin: 0;
+    padding: 0;
 }
 
 .title {
@@ -53,7 +54,7 @@ h1,h2,h3,h4,h5,h6,p {
 
 .container {
     width: 1200px;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
@@ -151,15 +152,21 @@ h1,h2,h3,h4,h5,h6,p {
 /* ================= Герой ================= */
 
 .hero {
-    height: 600px;
     background-color: var(--bacground-black-color);
-    color: var(--primary-white-color);  
     text-align: center;
 }
-.hero-title {   
-    margin-bottom: 30px;
-    /* width: 696px; */
 
+.hero .container {
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+.hero-title {   
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    width: 696px;
+
+    color: var(--primary-white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -247,6 +254,18 @@ h1,h2,h3,h4,h5,h6,p {
     padding-bottom: 103px;
 }
 
+
+
+
+/* ================= END Суть работы================= */
+
+/* ================= Кто работает================= */
+
+.workers {
+    background-color: #F5F4FA;
+    text-align: center;
+}
+
 .workers .title {
     margin-bottom: 50px;
     padding-top: 94px;
@@ -262,19 +281,7 @@ h1,h2,h3,h4,h5,h6,p {
     display: block;
 }
 
-
-
-/* ================= END Суть работы================= */
-
-/* ================= Кто работает================= */
-
-
-.workers {
-    background-color: #F5F4FA;
-    text-align: center;
-}
-
-.workers .item {
+.workers .item { 
     width: 270px;
     height: 368px;
     background-color: var(--primary-white-color);
@@ -321,7 +328,11 @@ h1,h2,h3,h4,h5,h6,p {
 
 .footer {
     background-color: var(--bacground-black-color);
-    height: 252px;
+}
+
+.footer .container {
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .logo.logo-footer {
@@ -337,25 +348,24 @@ h1,h2,h3,h4,h5,h6,p {
     
 }
 
-
-.footer .list {
+.contacts .link {
         color: rgba(255, 255, 255, 0.6);
         font-weight: 400;
         font-size: 14px;
         line-height: 1.71;
         font-style: normal;
+
       
 }
-.adress {
+.adress.link {
+    font-style: normal;
     color: var(--primary-white-color);
-    margin-bottom: 9px;
-    display: inline-block;
+    
 }
 
 
-.contacts:not(:last-child) {
+.adress-list .item:not(:last-child) {
     margin-bottom: 9px;
-
 }
 
 /* не разобрался как убрать строку на весь футер от class contacts. Если inline-block, то перескакивает выше, а если блок, то ничего не меняется 
@@ -367,13 +377,44 @@ h1,h2,h3,h4,h5,h6,p {
 
 /* ================= Наши работы================= */
 
+
 .work-list {
     background-color: var(--primary-white-color);
 }
 
+.title-none {
+    position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+}
 
 /* ================= Список кнопок================= */
+.button {
+    border-radius: 4px;
+    border: none;
+    padding: 6px 22px 6px 22px;
+}
 
+.work-list .container:not(:last-child) {
+    padding-top: 94px;
+    padding-bottom: 16px;
+}
+
+.button-list  {
+    display: flex;
+    justify-content: center;
+}
+
+.button-item:not(:last-child) {
+    margin-right: 8px;
+}
 
 .button {
     font-family: Roboto, sans-serif;
@@ -393,24 +434,62 @@ h1,h2,h3,h4,h5,h6,p {
 
 /* =================Примеры работ в портфолио================= */
 
+.work-list .container:not(:first-child) {
+    padding-top: 34px;
+    padding-bottom: 94px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.card-content {
+    border-right: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    padding: 20px 24px 20px 24px;
+}
+
+
+.portfolio-item {
+    width: 370px;
+    height: 404px;
+}
+
+.portfolio-img {
+    display: block;
+}
+
+.portfolio-item:not(:nth-child(3n + 3)) {
+    margin-right: 30px;
+}
+
+.portfolio-item:nth-child(-n +6) {
+    margin-bottom: 30px;
+}
 
 .work-header {
+    margin-bottom: 4px;
+    
+        
     color: var(--primary-text-color);
-   
     font-family: Roboto, sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 2;
-        letter-spacing: 0.06em;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
 }
 .work-paragrapf {
-    color: var(--tltle-text-color);
+    
 
+    color: var(--tltle-text-color);
     font-family: Roboto, sans-serif;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.88;
-        letter-spacing: 0.03em;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
 }
 .work-doublepar {
 color: var(--primary-text-color);
@@ -421,6 +500,7 @@ color: var(--primary-text-color);
         line-height: 1.88;
         letter-spacing: 0.03em;
     } 
+
 
 
         /* ================= END Примеры работ в портфолио================= */
