--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,8 @@ h1,h2,h3,h4,h5,h6, ul, li, button, p {
 }
 
 .list, 
-.link {
+.link,
+.item {
     text-decoration: none;
     list-style: none;
 }
